tests/baselines/reference/typeAliasDeclarationEmit(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
typeAliasDeclarationEmit.ts(3,37): error TS2314: Generic type 'callback' requires 1 type argument(s).


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== typeAliasDeclarationEmit.ts (1 errors) ====
    export type callback<T> = () => T;
    
    export type CallbackArray<T extends callback> = () => T;
                                        ~~~~~~~~
!!! error TS2314: Generic type 'callback' requires 1 type argument(s).